[package]
name        = "rethink-driver"
version     = "0.1.0"
authors     = ["Tobias Pfeiffer <tobias@tobiaspfeiffer.net>"]
edition     = "2018"
publish     = false
repository  = "https://gitlab.com/TobiP64/rethink-driver"
license     = "MIT"
description = "RethnkDB driver"

[features]
default = ["tls"]
tls     = ["rustls", "webpki"]
async   = ["futures-lite", "async-io", "async-tls", "async-mutex"]

[dependencies]
log          = "^0.4"
serde        = { version = "^1.0", features = ["serde_derive"] }
serde_json   = "^1.0"
serde_repr   = "^0.1"
rand         = "^0.8"
md5          = "^0.7"
sha2         = "^0.9"
hmac         = "^0.11"
pbkdf2       = "^0.8"
base64       = "^0.13"
stringprep   = "^0.1"
rustls       = { version = "^0.19", optional = true }
webpki       = { version = "^0.21", optional = true }
futures-lite = { version = "^1.12", optional = true }
async-io     = { version = "^1.4", optional = true }
async-tls    = { version = "^0.11", optional = true }
async-mutex  = { version = "^1.4", optional = true }