[package]
name        = "rethink-driver"
version     = "1.0.0"
authors     = ["Tobias Pfeiffer <tobias@tobiaspfeiffer.net>"]
edition     = "2021"
publish     = false
repository  = "https://gitlab.com/TobiP64/rethink-driver"
license     = "MIT"
description = "RethnkDB driver"

[features]
default = ["tls"]
tls     = ["rustls", "webpki"]
async   = ["smol", "async-rustls"]

[dependencies]
log              = "^0.4"
serde            = { version = "^1.0", features = ["derive"] }
serde_json       = "^1.0"
serde_repr       = "^0.1"
rand             = "^0.8"
# SASL auth
md5              = "^0.7"
sha2             = "^0.9"
hmac             = "^0.11"
pbkdf2           = "^0.8"
base64           = "^0.13"
stringprep       = "^0.1"
# TLS and async
webpki       = { version = "^0.21", optional = true }
rustls       = { version = "^0.18", optional = true }
async-rustls = { version = "^0.1", optional = true }
smol         = { version = "^1.2", optional = true }